--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,17 @@
 <html>
+  <head>
+    <title>Express</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
+  </head>
+  <body>
+  <header>Получение ближайших соседей точки</header>
+  <section>
+    <h1>Express</h1>
+    <p>Welcome to Express</p>
+    <div class="list">
 
-<head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
-
-<body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
-</body>
-
+    </div>
+  </section>
+  <footer>2020</footer>
+  </body>
 </html>
